Fix vfsPath's content gets pushed up when it gets scrollbar

--- a/api/templates/default/etemplate2.css
+++ b/api/templates/default/etemplate2.css
@@ -1359,11 +1359,12 @@ div.et2_vfsPath ul {
     flex-flow: row nowrap;
     /* This hides the higher level directories if overflow */
     direction: rtl;
-    height: 100%;
+    height: 32px;
     overflow-y: hidden;
     overflow-x: auto;
     max-width: 92%;
     margin-right: 7%;
+    padding-top: 9px;
 }
 
 div.et2_vfsPath ul::-webkit-scrollbar {
@@ -1384,7 +1385,6 @@ div.et2_vfsPath li {
     display: inline-block;
     padding-right: 5px;
     flex: none;
-    padding-top: 9px;
     color: #26537C;
     border-radius: 5px 0px 0px 5px;
 }
